[package]
name = "mls-ds-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mls-ds-core = { path = "../mls-ds-core" }
serde.workspace = true
serde_json = "1"
rusqlite.workspace = true
openmls.workspace = true
tls_codec.workspace = true
base64 = "0.22"
